- inclusao de intervalo de tempo na publicacao automatica de queue
- definicao de publicacao automatica para novos itens adicionados ao queue, quando
  este esta no modo de publicacao automatica
- bugfixes

HORAS TRABALHADAS: 7h

==========
11/06/2009
==========

- inclusao de botao excluir item do queue
- bugfixes
- exibicao de conteudo de um item do queue
- inclusao de formulario para edicao de item do queue

HORAS TRABALHADAS: 5h

==========
12/06/2009
==========

- bugfixes
- inclusao de metodo para persistencia nas alteracoes de um item do queue
- integração com FCKEditor para edicao de item do queue 
- inclusão de seletor para territory, timezone e culture no editor de perfil

HORAS TRABALHADAS: 9h

==========
16/06/2009
==========

- inclusão de modulo para obter palavras chaves a partir de um html (htmlcrawler)

HORAS TRABALHADAS: 4h

==========
19/06/2009
==========

- inclusão de opção para cadastro de palavras-chave no blog
- remoção do campo "nome" durante o cadastro de blogs
- registro  palavras-chave no article
- inclusao de webservice para sugestao de entradas do queue baseada nos keywords

HORAS TRABALHADAS: 4h

==========
22/06/2009
==========

- inclusao de metodo para inclusao de queue entries baseada em keywords

HORAS TRABALHADAS: 4h

==========
23/06/2009
==========

- exibicao e atualizacao automatica do auto enqueue no dashboard
- inclusao de cadastro de keywords ao adicionar um novo blog

HORAS TRABALHADAS: 4h

==========
26/06/2009
==========

- remocao de codigo nao utilizado
- ajustes e simplificacoes no sistema de layout / template do view

HORAS TRABALHADAS: 5h

==========
28/06/2009
==========

- alteracao da tela de login

HORAS TRABALHADAS: 3h

==========
29/06/2009
==========

- correcoes na tela de login
- inclusao de nova tela de cadastro
- alteracao de cadastro para nova tela de cadastro

HORAS TRABALHADAS: 6h

==========
30/06/2009
==========

- translations e small fixes

HORAS TRABALHADAS: 1h