@@ -1,0 +1,29 @@
+<?php
+
+/**
+ * Reader controller class
+ * 
+ * @category    PostCanal
+ * @package     Application Controller
+ * @author      Rafael Castilho <rafael@castilho.biz>
+ */
+
+class C_Reader extends B_Controller
+{
+    /**
+     * Before action
+     */
+    public function before()
+    {
+        $this->authorize();
+    }
+
+    /**
+     * Default action
+     *
+     * @return void
+     */
+    public function A_index()
+    {
+    }
+}
