@@ -164,5 +164,7 @@ HORAS TRABALHADAS: 6h
 ==========
 
 - translations e small fixes
+- alteracao do menu superior
+- separacao do modulo dashboard em reader / queue
 
-HORAS TRABALHADAS: 1h
+HORAS TRABALHADAS: 5h
